@@ -59,6 +59,7 @@ StatusCode PhysValPFO::fillHistograms(){
 
   if (!thePFOContainer){
     if (msgLvl(MSG::WARNING))  msg(MSG::WARNING) << " Have NULL pointer to xAOD::PFOContainer " << endreq;
+    return StatusCode::SUCCESS;
   }
   
   xAOD::PFOContainer::const_iterator firstPFO = thePFOContainer->begin();
