@@ -1,3 +1,7 @@
+11 May 2015 Mark Hodgkinson
+Fix Coverity issues 17432, 16380	
+Tag as PFODQA-00-00-10
+	
 4 November 2014 Mark Hodgkinson
 Add usage of new PFOAttributes class
 Tag as PFODQA-00-00-09
